makes tiles hidden by default to avoid instances of DOM overload for certain browsers

--- a/src/tiler.sass
+++ b/src/tiler.sass
@@ -28,11 +28,13 @@
     +gpu
     position: absolute
     overflow: hidden
-    display: block
+    display: none
     z-index: -1
     width: 100%
 
     &.active
       z-index: 2
+      display: block
     &.previous
       z-index: 1
+      display: block
